# ETE-DS_ML-Project-Implementation-KN

./: README.md  application.py  pyproject.toml
app/: main.py
app/api/components/: data_ingestion.py  data_transformation.py  model_trainer.py
app/api/pipeline/: predict_pipeline.py
app/templates/: home.html
app/utils/: utils.py
notebook/: Student Performence.ipynb
notebook/.ipynb_checkpoints/: Student Performence-checkpoint.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
