[tool.poetry]
name = "ete ds-ml project implementation kn"
version = "0.1.0"
description = ""
authors = ["Takib Yeasar <mdtakibyeasar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
numpy = "^2.1.0"
setuptools = "^73.0.1"
catboost = "^1.2.5"
xgboost = "^2.1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
